###
# This is a log of major user-visible changes in each MacPorts release.
# $Id$
###


Release 1.8.0 (unreleased):

Release 1.7.1 (unreleased):

Release 1.7.0 (2008-12-13 by blb):
    - Global variant descriptions using variant_descriptions.conf in the new
      resources directory in the ports tree (#14482, raimue)

    - Move port resources into the ports tree (#14553, raimue and blb)

    - Improve error message when "upgrade outdated" is used (#12288)

    - Properly handle ports whose version evaluates to 0 (#16740, ryandesign)

    - PortIndex is now regenerated atomically (#16234, blb & ryandesign)

    - Improve upon 'port lint' usage by not being too overbearing unless
      --nitpick is used (#14799)

    - Fix reinplace when the filename contains spaces (#17098, ryandesign)

    - Fix python port group issues (#15226)

    - Make sure global variants (from variants.conf) are applied to all
      phases (#11897)

    - Allow configuring --without-objc-runtime --without-objc-foundation,
      for building on platforms without Foundation like +puredarwin (r41015)

    - Changes in loading of configuration files. Currently the global
      configuration file is loaded first, then user defined one (if present),
      PORTSRC environment variable is loaded last. Last defined value is used
      for each configuration option. (#16329, contributed by Adam Byrtek)

    - Ruby port group now accepts a new (optional) last parameter for the
      ruby.setup command, "implementation". It is "ruby" by default, and
      can be set to "ruby19". It names the ruby-implementing port, and can
      possibly support still other rubys in the future. (#15912, febeling
      in r38683)

    - Don't use build.nice for complex build.cmd commands (#16091)

    - The buildmakejobs setting now also affects ports using the scons build
      system, so now scons-based ports can be built in parallel too. Previously