@@ -47,7 +47,7 @@ portarchivepath		@localstatedir_expanded@/macports/packages
 # Unarchive uses multiple types as a search list to locate the archive,
 # first archive to match one of the specified types in order is used.
 #
-# Supported types: tgz (default), tar, tbz, tbz2, tlz, xar, zip, cpgz, cpio
+# Supported types: tgz (default), tar, tbz, tbz2, tlz, xar, xpkg, zip, cpgz, cpio
 portarchivetype		tgz
 
 # Use ccache (C/C++ compiler cache) - see http://ccache.samba.org/
