@@ -54,6 +54,10 @@ default archive.type {}
 default archive.file {}
 default archive.path {}
 
+default archive.meta false
+default archive.metaname {}
+default archive.metapath {}
+
 set_ui_prefix
 
 proc archive_init {args} {
@@ -61,7 +65,8 @@ proc archive_init {args} {
 	global variations package.destpath workpath
 	global ports_force ports_source_only ports_binary_only
 	global portname portversion portrevision portvariants
-	global archive.destpath archive.type archive.file archive.path archive.fulldestpath
+	global archive.destpath archive.type archive.meta
+	global archive.file archive.path archive.fulldestpath
 
 	# Check mode in case archive called directly by user
 	if {[option portarchivemode] != "yes"} {
@@ -108,6 +113,9 @@ proc archive_init {args} {
 				set unsupported [expr $unsupported + 1]
 			}
 		}
+		if {${archive.type} == "xpkg"} {
+			set archive.meta true
+		}
 		if {[llength [option portarchivetype]] == $unsupported} {
 			ui_debug "Skipping archive ($portname) since specified archive types not supported"
 			set skipped 1
@@ -138,6 +146,7 @@ proc archive_command_setup {args} {
 	global archive.env archive.cmd
 	global archive.pre_args archive.args archive.post_args
 	global archive.type archive.path
+	global archive.metaname archive.metapath
 	global os.platform os.version
 
 	# Define appropriate archive command and options
@@ -216,6 +225,19 @@ proc archive_command_setup {args} {
 				return -code error "No '$xar' was found on this system!"
 			}
 		}
+		xpkg {
+			set xar "xar"
+			set compression "bzip2"
+			if {[catch {set xar [binaryInPath $xar]} errmsg] == 0} {
+				ui_debug "Using $xar"
+				set archive.cmd "$xar"
+				set archive.pre_args "-cv --exclude='\./\+.*' --compression=${compression} -n ${archive.metaname} -s ${archive.metapath} -f"
+				set archive.args "${archive.path} ."
+			} else {
+				ui_debug $errmsg
+				return -code error "No '$xar' was found on this system!"
+			}
+		}
 		zip {
 			set zip "zip"
 			if {[catch {set zip [binaryInPath $zip]} errmsg] == 0} {
@@ -236,11 +258,28 @@ proc archive_command_setup {args} {
 	return 0
 }
 
+proc putel { fd el data } {
+	# Quote xml data
+	set quoted [string map  { & &amp; < &lt; > &gt; } $data]
+	# Write the element
+	puts $fd "<${el}>${quoted}</${el}>"
+}
+
+proc putlist { fd listel itemel list } {
+	puts $fd "<$listel>"
+	foreach item $list {
+		putel $fd $itemel $item
+	}
+	puts $fd "</$listel>"
+}
+
 proc archive_main {args} {
 	global UI_PREFIX variations
 	global workpath destpath portpath ports_force
 	global portname portepoch portversion portrevision portvariants
 	global archive.fulldestpath archive.type archive.file archive.path
+	global archive.meta archive.metaname archive.metapath
+	global os.platform os.arch
 
 	# Create archive destination path (if needed)
 	if {![file isdirectory ${archive.fulldestpath}]} {
@@ -318,6 +357,81 @@ proc archive_main {args} {
 		puts $fd "$relpath"
 	}
 	close $fd
+
+	# the XML package metadata, for XAR package
+	# (doesn't contain any file list/checksums)
+	if {${archive.meta}} {
+		set archive.metaname "xpkg"
+		set archive.metapath [file join $workpath "${archive.metaname}.xml"]
+		set sd [open ${archive.metapath} w]
+		puts $sd "<xpkg version='0.2'>"
+		# TODO: split contents into <buildinfo> (new) and <package> (current)
+		#       see existing <portpkg> for the matching source package layout
+
+		putel $sd name ${portname}
+		putel $sd epoch ${portepoch}
+		putel $sd version ${portversion}
+		putel $sd revision ${portrevision}
+		putel $sd major 0
+		putel $sd minor 0
+
+		putel $sd platform ${os.platform}
+		putel $sd arch ${os.arch}
+		set vlist [lsort -ascii [array names variations]]
+		putlist $sd variants variant $vlist
+
+		if {[exists categories]} {
+			set primary [lindex [split [option categories] " "] 0]
+			putel $sd category $primary
+		}
+		if {[exists description]} {
+			putel $sd comment "[option description]"
+		}
+		if {[exists long_description]} {
+			putel $sd desc "[option long_description]"
+		}
+		if {[exists homepage]} {
+			putel $sd homepage "[option homepage]"
+		}
+
+            # Emit dependencies provided by this package
+            puts $sd "<provides>"
+                set name ${portname}
+                puts $sd "<item>"
+                putel $sd name $name
+                putel $sd major 0
+                putel $sd minor 0
+                puts $sd "</item>"
+            puts $sd "</provides>"
+            
+    set res [mport_search ^$portname\$]
+    if {[llength $res] < 2} {
+        ui_error "Dependency $portname not found"
+    } else {
+    array set portinfo [lindex $res 1]
+
+            # Emit build, library, and runtime dependencies
+            puts $sd "<requires>"
+            foreach {key type} {
+                depends_build "build"
+                depends_lib "library"
+                depends_run "runtime"
+            } {
+                if {[info exists portinfo($key)]} {
+                    set name [lindex [split $portinfo($key) :] end]
+                    puts $sd "<item type=\"$type\">"
+                    putel $sd name $name
+                    putel $sd major 0
+                    putel $sd minor 0
+                    puts $sd "</item>"
+                }
+            }
+            puts $sd "</requires>"
+    }
+
+		puts $sd "</xpkg>"
+		close $sd
+	}
 
 	# Now create the archive(s)
 	# Loop through archive types
